# pb173_project

./: .clang-format  .gitmodules  AffixAllocator.h  Bucketizer.h  CMakeLists.txt  FallbackAllocator.h  Freelist.h  Mallocator.h  NullAllocator.h  README.md  Segregator.h  StackAllocator.h  StatisticCollector.h  base.h  common.h  dynamic_size.h  main.cpp  test_affix.cpp  test_bucketizer.cpp  test_fallback.cpp  test_freelist.cpp  test_mallocator.cpp  test_null.cpp  test_segregator.cpp  test_stack.cpp  type_classes.h
bench/: bench_bitmapped.cpp  bench_common.h  bench_freelist.cpp  bench_mallocator.cpp  bench_segregator.cpp  bench_stack.cpp
presentation/: Makefile  presentation.md
src/: AffixAllocator.h  Allocators.h  BitSet.h  BitmappedBlock.h  Block.h  Bucketizer.h  FallbackAllocator.h  Freelist.h  Mallocator.h  NullAllocator.h  Segregator.h  StackAllocator.h  StatisticCollector.h  traits.h
test/: test_affix.cpp  test_bitmapped.cpp  test_bucketizer.cpp  test_common.h  test_complex.cpp  test_fallback.cpp  test_freelist.cpp  test_mallocator.cpp  test_null.cpp  test_segregator.cpp  test_stack.cpp  test_statistic.cpp  test_traits.cpp
